--- a/rendezvous.html
+++ b/rendezvous.html
@@ -65,7 +65,7 @@
             text-decoration: none;
             font-size: 16px;
             font-weight: 600;
-            color: #fff;
+            color: #0056b3;
             transition: color 0.3s;
         }
 
@@ -86,7 +86,7 @@
         .menu-toggle div {
             width: 30px;
             height: 3px;
-            background-color: #fff;
+            background-color: #172ead;
             margin: 5px 0;
             transition: 0.3s;
         }
